# udlnb

./: pyproject.toml
Chap01/: 1_1_BackgroundMathematics.ipynb
Chap02/: 2_1_Supervised_Learning.ipynb
Chap03/: 3_1_Shallow_Networks_I.ipynb
